--- a/backend/package.json
+++ b/backend/package.json
@@ -2,29 +2,30 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/server.js",
+  
+  "main": "./server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "dev": "nodemon server.js --ignore '../frontend'",
+    "start": "node server.js",
+    "dev": "nodemon server.js ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Mikat Syed",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.2",
-    "cloudinary": "^1.29.0",
+    "body-parser": "^1.20.0",
+    "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.3",
-    "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15",
-    "stripe": "^8.174.0",
+    "mongoose": "^6.3.4",
+    "nodemailer": "^6.7.5",
+    "nodemon": "^2.0.16",
+    "stripe": "^9.2.0",
     "validator": "^13.7.0"
   }
 }
